created utils for opening and closing the NUIs

--- a/SAL_Characters/html/index.html
+++ b/SAL_Characters/html/index.html
@@ -14,80 +14,60 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
+    <div id="char-select-container" class="container">
       <div>
         <h1>Select Your Character</h1>
       </div>
-      <div
+      <class
         class="row no-gutters justify-content-center align-items-center h-100"
       >
         <div class="col-3">
           <div class="card card-block">
             <div class="card-body">
-              <h5 class="card-title">Empty Slot</h5>
-              <a href="#" class="btn btn-success mx-auto">Create Character</a>
+              <h5 class="card-title character-name">Empty Slot</h5>
+              <a href="#" class="btn btn-success mx-auto create-new-character">Create Character</a>
             </div>
           </div>
         </div>
         <div class="col-3">
           <div class="card card-block">
             <div class="card-body">
-              <h5 class="card-title">Chris Tarrent</h5>
-              <p class="card-text">Job: Police</p>
-              <p class="card-text">Cash: $4000</p>
-              <p class="card-text">Bank: $999999</p>
-              <p class="card-text">DOB: 19/06/1999</p>
-              <div class="row no-gutters my-4">
-                <div class="col-6">
-                  <a href="#" class="btn btn-primary mx-1">Select Character</a>
-                </div>
-                <div class="col-6">
-                  <a href="#" class="btn btn-danger mx-1">Delete Character</a>
-                </div>
-              </div>
+              <h5 class="card-title character-name">Empty Slot</h5>
+              <a href="#" class="btn btn-success mx-auto create-new-character">Create Character</a>
             </div>
           </div>
         </div>
         <div class="col-3">
           <div class="card card-block">
             <div class="card-body">
-              <h5 class="card-title">Chris Tarrent</h5>
-              <p class="card-text">Job: Police</p>
-              <p class="card-text">Cash: $4000</p>
-              <p class="card-text">Bank: $999999</p>
-              <p class="card-text">DOB: 19/06/1999</p>
-              <div class="row no-gutters my-4">
-                <div class="col-6">
-                  <a href="#" class="btn btn-primary mx-1">Select Character</a>
-                </div>
-                <div class="col-6">
-                  <a href="#" class="btn btn-danger mx-1">Delete Character</a>
-                </div>
-              </div>
+              <h5 class="card-title character-name">Empty Slot</h5>
+              <a href="#" class="btn btn-success mx-auto create-new-character">Create Character</a>
             </div>
           </div>
         </div>
         <div class="col-3">
           <div class="card card-block">
             <div class="card-body">
-              <h5 class="card-title">Chris Tarrent</h5>
-              <p class="card-text">Job: Police</p>
-              <p class="card-text">Cash: $4000</p>
-              <p class="card-text">Bank: $999999</p>
-              <p class="card-text">DOB: 19/06/1999</p>
-              <div class="row no-gutters my-4">
-                <div class="col-6">
-                  <a href="#" class="btn btn-primary mx-1">Select Character</a>
-                </div>
-                <div class="col-6">
-                  <a href="#" class="btn btn-danger mx-1">Delete Character</a>
-                </div>
-              </div>
+              <h5 class="card-title character-name">Empty Slot</h5>
+              <a href="#" class="btn btn-success mx-auto create-new-character">Create Character</a>
             </div>
           </div>
         </div>
       </div>
     </div>
+
+    <div id="char-creation-container" class="container">
+      <div>
+        <h1>Create New Character</h1>
+      </div>
+      <div class="card card-block">
+        <div class="card-body">
+          <h5 class="card-title character-name">Empty Slot</h5>
+          <a href="#" class="btn btn-success mx-auto create-new-character">Create Character</a>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
