--- a/SAL_Characters/html/index.html
+++ b/SAL_Characters/html/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
     <link rel="stylesheet" href="css/styles.css" />
     <title>Document</title>
   </head>
@@ -62,8 +63,25 @@
       </div>
       <div class="card card-block">
         <div class="card-body">
-          <h5 class="card-title character-name">Empty Slot</h5>
-          <a href="#" class="btn btn-success mx-auto create-new-character">Create Character</a>
+          <form id="create-character">
+            <div class="form-group">
+              <label for="firstName">First Name</label>
+              <input type="text" class="form-control" id="first-name" placeholder="Example: Peter">
+            </div>
+            <div class="form-group">
+              <label for="middleName">Middle Name</label>
+              <input type="text" class="form-control" id="middle-name" placeholder="Example: Drew">
+            </div>
+            <div class="form-group">
+              <label for="lastName">Last Name</label>
+              <input type="text" class="form-control" id="last-name" placeholder="Example: Holloway">
+            </div>
+            <div class="form-group">
+              <label class="control-label" for="dob">Date of Birth</label>
+              <input class="form-control" id="dob" name="dob" placeholder="MM/DD/YYY" type="text"/>
+            </div>
+            <button type="submit" class="btn btn-primary">Create Character</button>
+          </form>
         </div>
       </div>
     </div>
@@ -83,6 +101,7 @@
       integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
       crossorigin="anonymous"
     ></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
     <script src="js/main.js" type="text/javascript"></script>
   </body>
 </html>
