--- a/SAL_Characters/html/index.html
+++ b/SAL_Characters/html/index.html
@@ -24,7 +24,7 @@
       >
         <div class="col-3">
           <div class="card card-block">
-            <div class="card-body">
+            <div class="card-body" data-charid="1">
               <h5 class="card-title character-name">Empty Slot</h5>
               <a href="#" class="btn btn-success mx-auto create-new-character">Create Character</a>
             </div>
@@ -32,7 +32,7 @@
         </div>
         <div class="col-3">
           <div class="card card-block">
-            <div class="card-body">
+            <div class="card-body" data-charid="2">
               <h5 class="card-title character-name">Empty Slot</h5>
               <a href="#" class="btn btn-success mx-auto create-new-character">Create Character</a>
             </div>
@@ -40,7 +40,7 @@
         </div>
         <div class="col-3">
           <div class="card card-block">
-            <div class="card-body">
+            <div class="card-body" data-charid="3">
               <h5 class="card-title character-name">Empty Slot</h5>
               <a href="#" class="btn btn-success mx-auto create-new-character">Create Character</a>
             </div>
@@ -48,7 +48,7 @@
         </div>
         <div class="col-3">
           <div class="card card-block">
-            <div class="card-body">
+            <div class="card-body" data-charid="4">
               <h5 class="card-title character-name">Empty Slot</h5>
               <a href="#" class="btn btn-success mx-auto create-new-character">Create Character</a>
             </div>
@@ -82,13 +82,14 @@
             </div>
             <button type="submit" class="btn btn-primary">Create Character</button>
           </form>
+          <button id="go-back" class="btn btn-primary">Go Back</button>
         </div>
       </div>
     </div>
 
     <script
-      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous"
     ></script>
     <script
