--- a/SAL_Characters/html/index.html
+++ b/SAL_Characters/html/index.html
@@ -10,7 +10,10 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"/>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/css/bootstrap-datepicker3.css"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Document</title>
   </head>
@@ -19,42 +22,57 @@
       <div>
         <h1>Select Your Character</h1>
       </div>
-      <class
+      <div
         class="row no-gutters justify-content-center align-items-center h-100"
       >
         <div class="col-3">
           <div class="card card-block">
-            <div class="card-body" data-charid="1">
+            <div
+              class="card-body character-slot"
+              data-charid="1"
+              onclick="gatherCharID(this);"
+            >
               <h5 class="card-title character-name">Empty Slot</h5>
-              <a href="#" class="btn btn-success mx-auto create-new-character">Create Character</a>
             </div>
           </div>
         </div>
         <div class="col-3">
           <div class="card card-block">
-            <div class="card-body" data-charid="2">
+            <div
+              class="card-body character-slot"
+              data-charid="2"
+              onclick="gatherCharID(this);"
+            >
               <h5 class="card-title character-name">Empty Slot</h5>
-              <a href="#" class="btn btn-success mx-auto create-new-character">Create Character</a>
             </div>
           </div>
         </div>
         <div class="col-3">
           <div class="card card-block">
-            <div class="card-body" data-charid="3">
+            <div
+              class="card-body character-slot"
+              data-charid="3"
+              onclick="gatherCharID(this);"
+            >
               <h5 class="card-title character-name">Empty Slot</h5>
-              <a href="#" class="btn btn-success mx-auto create-new-character">Create Character</a>
             </div>
           </div>
         </div>
         <div class="col-3">
           <div class="card card-block">
-            <div class="card-body" data-charid="4">
+            <div
+              class="card-body character-slot"
+              data-charid="4"
+              onclick="gatherCharID(this);"
+            >
               <h5 class="card-title character-name">Empty Slot</h5>
-              <a href="#" class="btn btn-success mx-auto create-new-character">Create Character</a>
             </div>
           </div>
         </div>
       </div>
+      <a href="#" id="create-new-character" class="btn btn-success mx-auto"
+        >Create Character</a
+      >
     </div>
 
     <div id="char-creation-container" class="container">
@@ -66,21 +84,44 @@
           <form id="create-character">
             <div class="form-group">
               <label for="firstName">First Name</label>
-              <input type="text" class="form-control" id="first-name" placeholder="Example: Peter">
+              <input
+                type="text"
+                class="form-control"
+                id="first-name"
+                placeholder="Example: Peter"
+              />
             </div>
             <div class="form-group">
               <label for="middleName">Middle Name</label>
-              <input type="text" class="form-control" id="middle-name" placeholder="Example: Drew">
+              <input
+                type="text"
+                class="form-control"
+                id="middle-name"
+                placeholder="Example: Drew"
+              />
             </div>
             <div class="form-group">
               <label for="lastName">Last Name</label>
-              <input type="text" class="form-control" id="last-name" placeholder="Example: Holloway">
+              <input
+                type="text"
+                class="form-control"
+                id="last-name"
+                placeholder="Example: Holloway"
+              />
             </div>
             <div class="form-group">
               <label class="control-label" for="dob">Date of Birth</label>
-              <input class="form-control" id="dob" name="dob" placeholder="MM/DD/YYY" type="text"/>
+              <input
+                class="form-control"
+                id="dob"
+                name="dob"
+                placeholder="MM/DD/YYY"
+                type="text"
+              />
             </div>
-            <button type="submit" class="btn btn-primary">Create Character</button>
+            <button type="submit" class="btn btn-primary">
+              Create Character
+            </button>
           </form>
           <button id="go-back" class="btn btn-primary">Go Back</button>
         </div>
@@ -102,7 +143,10 @@
       integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
       crossorigin="anonymous"
     ></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"></script>
+    <script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.4.1/js/bootstrap-datepicker.min.js"
+    ></script>
     <script src="js/main.js" type="text/javascript"></script>
   </body>
 </html>
