CharSelect: Prevent user from overwritting characters by mistake

--- a/SAL_Characters/html/index.html
+++ b/SAL_Characters/html/index.html
@@ -30,6 +30,7 @@
             <div
               class="card-body character-slot"
               data-charid="1"
+              data-ischar="0"
               onclick="gatherCharID(this);"
             >
               <h5 class="card-title character-name">Empty Slot</h5>
@@ -41,6 +42,7 @@
             <div
               class="card-body character-slot"
               data-charid="2"
+              data-ischar="0"
               onclick="gatherCharID(this);"
             >
               <h5 class="card-title character-name">Empty Slot</h5>
@@ -52,6 +54,7 @@
             <div
               class="card-body character-slot"
               data-charid="3"
+              data-ischar="0"
               onclick="gatherCharID(this);"
             >
               <h5 class="card-title character-name">Empty Slot</h5>
@@ -63,6 +66,7 @@
             <div
               class="card-body character-slot"
               data-charid="4"
+              data-ischar="0"
               onclick="gatherCharID(this);"
             >
               <h5 class="card-title character-name">Empty Slot</h5>
