--- a/SAL_Characters/html/index.html
+++ b/SAL_Characters/html/index.html
@@ -77,6 +77,7 @@
       <a href="#" id="create-new-character" class="btn btn-success mx-auto"
         >Create Character</a
       >
+      <a href="" class="btn btn-primary select-character">Select Character</a>
     </div>
 
     <div id="char-creation-container" class="container">
