CharSelect: Can now play as a selected character

--- a/SAL_Characters/html/index.html
+++ b/SAL_Characters/html/index.html
@@ -77,7 +77,9 @@
       <a href="#" id="create-new-character" class="btn btn-success mx-auto"
         >Create Character</a
       >
-      <a href="" class="btn btn-primary select-character">Select Character</a>
+      <a href="" id="select-character" class="btn btn-primary"
+        >Select Character</a
+      >
     </div>
 
     <div id="char-creation-container" class="container">
