--- a/SAL_Characters/html/index.html
+++ b/SAL_Characters/html/index.html
@@ -122,7 +122,7 @@
                 class="form-control"
                 id="dob"
                 name="dob"
-                placeholder="MM/DD/YYY"
+                placeholder="MM/DD/YYYY"
                 type="text"
               />
             </div>
